plugins {
    id 'java-library'
    id 'application'
    id 'eclipse'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

application {
    mainClass = 'pwcg.gui.maingui.PwcgMain'
    applicationName = 'PWCGTC'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.guava:guava:20.0'
	implementation group: 'com.fasterxml', name: 'jackson-xml-databind', version: '0.6.2'
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.0.1'
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
    implementation group: 'net.bytebuddy', name: 'byte-buddy', version: '1.14.12'
    implementation(files("lib/RelativeLayout-v1.0.jar"))
    implementation(files("lib/Jama-1.0.2.jar"))
    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'

    testImplementation(platform('org.junit:junit-bom:5.10.2'))
	testImplementation('org.junit.jupiter:junit-jupiter')
    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.2.0'
    testImplementation group: 'org.mockito', name: 'mockito-inline', version: '5.2.0'
    testCompileOnly 'org.projectlombok:lombok:1.18.34'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
        testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine')
}

jar {
    archiveFileName = "PWCGTC.jar"
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA'
    
 	manifest {
        attributes 'Main-Class': 'pwcg.gui.maingui.PwcgMain'
    }

    from('TCData') {
        into 'TCData'
    }
    
	from {
    	configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
  	}
}

def isWindows = System.getProperty('os.name').toLowerCase().contains('windows')

def defaultIl2Dir = "${System.getProperty('user.home')}/.steam/steam/steamapps/common/IL-2 Sturmovik Battle of Stalingrad"
def il2Dir = (findProperty('il2Dir') ?: System.getenv('IL2_DIR') ?: defaultIl2Dir) as String

tasks.register('copyJar', Copy) {
    onlyIf { isWindows }
    from("$buildDir/libs/PWCGTC.jar")
    into("D:/PWCG/Deploy")
}

tasks.register('deployIL2', Copy) {
    dependsOn 'jar'

    def il2DirFile = file(il2Dir)
    onlyIf { il2DirFile.exists() }

    from("$buildDir/libs/PWCGTC.jar")
    into(il2DirFile)

    doFirst {
        logger.lifecycle("Deploying PWCGTC.jar to IL-2 dir: ${il2DirFile}")
    }
}

tasks.register('buildAndDeployIL2') {
    dependsOn 'deployIL2'
}

test {
        javaLauncher = javaToolchains.launcherFor {
                languageVersion = JavaLanguageVersion.of(21)
        }

  if (System.properties['test.profile'] != 'integration') {
    useJUnitPlatform()
    exclude '**/*integration*'

        testLogging {
            events 'failed'
            exceptionFormat 'full'
        }
  } else {
    useJUnitPlatform()
    exclude '**/*pwcg/*'

        testLogging {
            events 'failed'
            exceptionFormat 'full'
        }
  }
}



task deployTC(type:JavaExec) {
    mainClass.set("pwcg.dev.deploy.DeployPwcgTC")
	classpath = sourceSets.main.runtimeClasspath
	onlyIf { isWindows }
}

task buildTC(type: Exec) {
    workingDir "$projectDir"
    commandLine 'cmd', '/c', 'D:/Utils/launch4j/launch4jc.exe D:/PWCG/Launch4JConfigs/TCLaunchConfig.xml'
	onlyIf { isWindows }
}

task zipTC(type: Exec) {
    workingDir "$projectDir"
    commandLine 'cmd', '/c', ' D:/Utils/7Zip/7-zip/7z.exe a -tzip D:/PWCG/Deploy/PWCGTC.zip D:/PWCG/Deploy/PWCGTC'
	onlyIf { isWindows }
}

tasks.register('releaseWindows') {
    onlyIf { isWindows }
    dependsOn 'jar', 'copyJar', 'deployTC', 'buildTC', 'zipTC'
}
